--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,15 +2,19 @@ name: Renovate
 
 on:
   schedule:
-    - cron: "0 3 1 * *" # Ejecutar solo 1 vez al mes
-  workflow_dispatch:      # permite ejecutarlo manualmente
+    - cron: "0 3 * * 1" # Lunes 3 AM
+  workflow_dispatch:
 
 jobs:
   renovate:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Run Renovate
-        uses: renovatebot/github-action@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Renovate
+        uses: renovatebot/github-action@v40
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          renovate-version: full
+        env:
+          RENOVATE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
