--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,18 +2,19 @@ name: Renovate
 
 on:
   schedule:
-    - cron: "0 3 * * 1" # Lunes 3 AM
-  workflow_dispatch:
+    - cron: "0 3 1 * *" # Ejecutar solo 1 vez al mes
+  workflow_dispatch:       # Permite ejecutarlo manualmente
 
 jobs:
   renovate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Renovate
-        uses: renovatebot/github-action@v40
+      - name: Run Renovate
+        uses: renovatebot/github-action@v44.0.3
         with:
           renovate-version: full
         env:
