--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -1,3 +1,4 @@
+#Nombre del workflow que aparecerá en GitHub Actions
 name: Renovate
 
 on:
@@ -10,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      #Descargar el contenido del repositorio dentro del runner
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      #Ejecutar Renovate para buscar dependencias actualizables
       - name: Run Renovate
-        uses: renovatebot/github-action@v44.0.3
-        with:
-          renovate-version: full
+        uses: renovatebot/github-action@v44.0.3 #Versión estable de la acción oficial de Renovate
+        with: 
+          renovate-version: full #Usa la versión completa del motor Renovate
         env:
           RENOVATE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -26,6 +29,7 @@ jobs:
           echo "Revisando si hubo actualizaciones..."
           echo "----------------------------------------"
 
+          #Busca en el archivo de logs si Renovate abrió una PR nueva
           if grep -qi '"prOpened": true' renovate.log.json; then
             echo "Renovate abrió nuevas Pull Requests con actualizaciones."
           else
